# UltimateQuantumKeyboard

./: README.md  UltimateQuantumKeyboardAnalyzer.py  __init__.py  index.html  pyproject.toml  vis.html
Keyboard/: 00.html  README.md  UltimateQuantumKeyboard.py  cerebras_dataset_generator.py  compression_ratios.json  enhanced_keyboard_layout.py  generate_dataset.py  hex_codes.json  index.html  keyboard_compression.py  keyboard_layout.py  keyboard_layout2.py  keyboard_layout3.py  keyboard_layouts.json  pyproject.toml  quantum_enhanced_keyboard.py  test_keyboard_compression.py  ultimate_quantum_keyboard.py  word_metrics.csv
